--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "firebase": "^12.3.0",
     "framer-motion": "^12.23.16",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
