--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "date-fns": "^4.1.0",
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.16",
