Update App.jsx, add map and footer

--- a/.env
+++ b/.env
@@ -1,1 +1,22 @@
 VITE_NGROK_URL=28a20dccf4ac.ngrok-free.app
+// src/firebase.js
+import { initializeApp } from "firebase/app";
+import { getAuth, GoogleAuthProvider, FacebookAuthProvider } from "firebase/auth";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyAN4rkr84ZTDiZzXrguNfatyU2H9Icjoyc", 
+  authDomain: "safeconnectnaija.firebaseapp.com", 
+  projectId: "safeconnectnaija",
+  storageBucket: "safeconnectnaija.firebasestorage.app",
+  messagingSenderId: "551611887104", 
+  appId: "1:551611887104:web:42da44534f3c616febf2e5", 
+  measurementId: "G-D75MKP0WC4"
+};
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+
+const googleProvider = new GoogleAuthProvider();
+const facebookProvider = new FacebookAuthProvider();
+
+export { app, auth, googleProvider, facebookProvider };
